NEWS - user visible changes				-*- outline -*-

 GnuCOBOL 3.2 to be released in September 2021

* New GnuCOBOL features

** TODO

** New intrinsic functions

  BIT-OF, BIT-TO-CHAR, HEX-OF, HEX-TO-CHAR


* Changes to the COBOL compiler (cobc) options:

** the GnuCOBOL extension of auto-adding the RECURSIVE attribute
   if a program potentionally calls its own PROGRAM-ID was moved
   to a dialect option; it is now only active with -std=default
   (and raises a warning as previously with -Wextra); if you want
   to use this extension for other dialects use the new
   -fself-call-recursive=warning (or "ok")

** adjustments to warning options:
   -Wconstant-expression was changed to a group warning and includes
    the new, previously integrated, -Wconstant-numlit-expression


* Important Bugfixes:

 * for dialects other than the GnuCOBOL default different reserved "alias" words
   were not usable, for example SYNCHRONIZED or COMPUTATIONAL. This was fixed
   and reserved words updated for the dialects "acu" (to ACUCOBOL-GT 10.4),
   "ibm" (to Enterprise COBOL 6.3) and "mf" (to Micro Focus Visual COBOL 6.0)
 

 GnuCOBOL 3.1.2 released (20201223)
 GnuCOBOL 3.1.1 released (20201208) containing INITIALIZE bug #694
 GnuCOBOL 3.1 released   (20201111) had build issues that were fixed

* New GnuCOBOL features

** XML GENERATE statement
   (note: runtime support needs additional library libxml2)

** JSON GENERATE statement
   (note: runtime support needs additional library cJSON or JSON-C)
   
** CONTINUE AFTER statement (COBOL 202x) implemented, also handle fractions
   of seconds in C$SLEEP now
   
** TYPEDEF and SAME AS (COBOL 2002) implemented, including the MicroFocus
   and RM/COBOL variants

** >>TURN (COBOL 2002) directive implemented, allowing some exception checks
   to be turned on/off per source as desired

** Improved support for different compiler extensions (ACUCOBOL, IBM,
   Fujitsu, MicroFocus COBOL, Microsoft COBOL, RM/COBOL, CA Realia and more)
