@@ -100,6 +100,9 @@ CB_CONFIG_BOOLEAN (cb_binary_truncate, "binary-truncate",
 CB_CONFIG_BOOLEAN (cb_complex_odo, "complex-odo",
 	_("allow complex OCCURS DEPENDING ON"))
 
+CB_CONFIG_BOOLEAN (cb_odoslide, "odoslide",
+	_("adjust items following OCCURS DEPENDING (implies complex-odo)"))
+
 CB_CONFIG_BOOLEAN (cb_indirect_redefines, "indirect-redefines",
 	_("allow REDEFINES to other than last equal level number"))
 
