@@ -64,6 +64,9 @@ pretty-display:			yes
 # Allow complex OCCURS DEPENDING ON
 complex-odo:			no
 
+# Adjust position of items following OCCURS DEPENDING
+odoslide:			no
+
 # Allow REDEFINES to other than last equal level number
 indirect-redefines:		yes
 
