@@ -64,7 +64,10 @@ filename-mapping:		yes # probably
 pretty-display:			no
 
 # Allow complex OCCURS DEPENDING ON
-complex-odo:			no
+complex-odo:			yes
+
+# Adjust position of items following OCCURS DEPENDING
+odoslide:			yes
 
 # Allow REDEFINES to other than last equal level number
 indirect-redefines:		no
