@@ -64,6 +64,9 @@ pretty-display:			no
 # Allow complex OCCURS DEPENDING ON
 complex-odo:			yes
 
+# Adjust position of items following OCCURS DEPENDING
+odoslide:			yes
+
 # Allow REDEFINES to other than last equal level number
 indirect-redefines:		yes
 
