@@ -67,6 +67,9 @@ pretty-display:			yes
 # Allow complex OCCURS DEPENDING ON
 complex-odo:			yes
 
+# Adjust position of items following OCCURS DEPENDING
+odoslide:			no
+
 # Allow REDEFINES to other than last equal level number
 indirect-redefines:		yes
 
