@@ -71,6 +71,9 @@ pretty-display:			no
 # Allow complex OCCURS DEPENDING ON
 complex-odo:			yes
 
+# Adjust position of items following OCCURS DEPENDING
+odoslide:			no
+
 # Allow REDEFINES to other than last equal level number
 indirect-redefines:		no
 
