@@ -13,6 +13,11 @@ NEWS - user visible changes				-*- outline -*-
 
 * Changes to the COBOL compiler (cobc) options:
 
+** the compile flag -fodoslide was moved to a dialect configuration,
+   while -fodoslide still works as before it is now implied with
+   -std=ibm/mvs/bs2000, for compatibility to previous behaviour compile
+   with -fno-odoslide
+
 ** the GnuCOBOL extension of auto-adding the RECURSIVE attribute
    if a program potentionally calls its own PROGRAM-ID was moved
    to a dialect option; it is now only active with -std=default
@@ -23,6 +28,9 @@ NEWS - user visible changes				-*- outline -*-
 ** adjustments to warning options:
    -Wconstant-expression was changed to a group warning and includes
     the new, previously integrated, -Wconstant-numlit-expression
+
+** new compiler command line option to list the known runtime exception names
+   and fatality `cobc --list-exceptions`
 
 
 * Important Bugfixes:
